human_written_tests/WebAssembly/processed_control_flow_validation/test_block_26.wast
(assert_invalid
  (module (func $type-value-empty-vs-nums (result i32 i32)
    (block (result i32 i32))
  ))
  "type mismatch"
)